robballen75-Salesforce/4-7-15/src/iTools State/Country Validation/objects/InSitu_CountryNames__c.object
<CustomObject>
    <description>An iTools Country/State Validation custom object that contains Country names as defined by ISO 3166. Includes additional country names to support variations such as abbrs, common misspellings, alternate/former names, foreign language and decorated characters.</description>
    <fields>
        <fullName>CountryID__c</fullName>
        <description>Used only by name sets of type &apos;Country Name&apos;. Logically links a name set back to its associated country which provides for the ability to do a reverse look-up.</description>
        <label>CountryID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndexID__c</fullName>
        <description>For indexed set style, the index is used for the 2nd dimension of set names.</description>
        <label>IndexID</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsLeadName__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates the preferred Country name for the given language.</description>
        <label>Preferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsStandard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the name is a standard name provided by InSitu Software or a custom name added by a user/organization.</description>
        <label>IsStandard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>The language of the name value.</description>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>af</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>az</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>be</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>da</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>de</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>el</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>et</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Search_Value__c</fullName>
        <description>The normalized version of the Name Set item value.</description>
        <label>Search Value</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The actual name of the name set item.</description>
        <label>Value</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <description>The date on which the current version was installed for the organization.</description>
        <label>Version Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <defaultValue>9999</defaultValue>
        <description>The version number of the current content set installed for the organization.</description>
        <label>Version Number</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Country Name</label>
    <nameField>
        <label>Record ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Country Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>